IGBF-3626: Refactored code to mock the UCSC API calls in testcases, also did some refactoring to support the mocking.